[tool.poetry]
name = "pkg-test"
version = "0.1.0"
description = "Testing"
authors = ["Surendran Dhashnamurthy <surendran.dhashnamurthy@elevancehealth.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
